--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+
+
     <title>Protfolio</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae placeat ab fugiat asperiores porro optio! Cupiditate placeat accusamus ducimus explicabo. Vero omnis facilis iusto quam! Et doloribus dolores voluptas tempora.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae perspiciatis adipisci placeat quasi perferendis esse facilis, amet veniam voluptatum rerum laboriosam deserunt at alias libero, quae qui? Ipsa, excepturi veritatis!</p>
+    <section class="top_banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="name_color">Al Amin Sarker</span> Dolon </h1>
+            <h3>Build calimber and Train Stopped </h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae repudiandae possimus libero voluptas harum delectus voluptates ullam. Cupiditate, totam. Veniam minus saepe magnam libero sunt eos animi accusamus quaerat minima.</p>
+            <a class="link_button" target="-blank" href="http://alaminsarker.me/">Here me</a>
+
+        </div>
+        <div class="half-width">
+            <img src="images/dolon_2.png" alt="">
+
+        </div>
+
+
+    </section>
+
 </body>
 </html>
