--- a/index.html
+++ b/index.html
@@ -30,5 +30,17 @@
 
     </section>
 
+    <section class="dream_big">
+        <div class="half-width">
+            <img src="images/my-bg2 (2).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Devloper</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nulla sint necessitatibus minima repellat dolorum similique et, doloremque officiis, repudiandae, hic laborum eos consequuntur blanditiis!</p>
+            <a class="link_button" target="-blank" href="">Download Resume</a>
+        </div>
+    </section>
+
 </body>
 </html>
